fixed z-index fighting between footer and purchase lock

--- a/src/sass/app_2/_common/layout/footer.scss
+++ b/src/sass/app_2/_common/layout/footer.scss
@@ -7,7 +7,7 @@ footer {
     border-top: 1px solid $COLOR_GRAY;
     background-color: $COLOR_WHITE;
     box-sizing: border-box;
-    z-index: 2;
+    z-index: 3;
     display: flex;
     justify-content: flex-end;
     align-items: center;
